# GeneralizedMap

./: CMakeLists.txt  GeneralizedMap.cpp  README.md
data/: cube_darts.csv  cube_edges.csv  cube_faces.csv  cube_vertices.csv  torus_darts.csv  torus_edges.csv  torus_faces.csv  torus_vertices.csv  torus_volumes.csv
src/: Gmap.h  Gmap.hpp  Point.h  main.cpp  testscript.h
